[package]
name = "lemonade-app"
version = "0.0.0"
description = "Lemonade Desktop App"
authors = ["AMD"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

# The `_lib` suffix may seem redundant but it is necessary to make the lib name unique
# and wouldn't conflict with the bin name. This seems to be only an issue on Windows.
# See https://github.com/rust-lang/cargo/issues/8519
[lib]
name = "lemonade_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-deep-link = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
dirs = "5"
url = "2"
log = "0.4"
env_logger = "0.11"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
incremental = false
opt-level = "s"
strip = true
